--- a/Management Hotel.csproj
+++ b/Management Hotel.csproj
@@ -75,19 +75,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Control\ConnectSql.cs" />
-    <Compile Include="Control\ControlLabourer\CtrCheckInCheckOut.cs" />
-    <Compile Include="Control\ControlManager\CtrManager.cs" />
-    <Compile Include="Control\ControlManager\CtrManagerAddEmployee.cs" />
-    <Compile Include="Control\ControlManager\CtrDivisionEmployee.cs" />
-    <Compile Include="Control\ControlManager\CtrManagerEditEmployee.cs" />
-    <Compile Include="Control\ControlManager\CtrReportEmployee.cs" />
-    <Compile Include="Control\ControlReceptionist\CtrCRUDFood.cs" />
-    <Compile Include="Control\ControlReceptionist\CtrCRUDGuest.cs" />
-    <Compile Include="Control\ControlReceptionist\CtrCRUDRoom.cs" />
-    <Compile Include="Control\ControlReceptionist\CtrOrderFood.cs" />
-    <Compile Include="Control\ControlReceptionist\CtrOrderRoom.cs" />
-    <Compile Include="Control\ControlReceptionist\CtrPayRoom.cs" />
+    <Compile Include="View\Class1.cs" />
     <Compile Include="View\FormClient.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,7 +106,6 @@
     <Compile Include="View\ViewManager\FormAddEmployee.Designer.cs">
       <DependentUpon>FormAddEmployee.cs</DependentUpon>
     </Compile>
-    <Compile Include="Control\CtrAccount.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\FormLogin.cs">
@@ -409,7 +396,6 @@
       <DependentUpon>FormSelectRoom.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
-    <None Include="phancong.xlsx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -430,6 +416,7 @@
     <Content Include="Image\login.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Control\" />
     <Folder Include="Model\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
